// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`byte metric 1`] = `
<EuiCard
  description="Heap Total"
  layout="horizontal"
  textAlign="center"
  title="1.50 GB"
  titleElement="span"
/>
`;

exports[`float metric 1`] = `
<EuiCard
  description="Load"
  layout="horizontal"
  textAlign="center"
  title="4.05, 3.37, 3.12"
  titleElement="span"
/>
`;

exports[`general metric 1`] = `
<EuiCard
  description="A metric"
  layout="horizontal"
  textAlign="center"
  title="1.80"
  titleElement="span"
/>
`;

exports[`millisecond metric 1`] = `
<EuiCard
  description="Response Time Max"
  layout="horizontal"
  textAlign="center"
  title="1234.00 ms"
  titleElement="span"
/>
`;
